# stiflyt

./: .gitignore  DATA_QUALITY_PLAN.md  DESIGN.md  Makefile  PROBLEM.md  README.md  REQUIREMENTS.md  TASKS.md  main.py  pyproject.toml  setup.py
api/: routes.py  schemas.py
cli/: README.md  __init__.py  api_client.py  config.py  find_available_numbers.py  formatters.py  query_routes.py
frontend/: README.md  debug.html  index.html  server.py
frontend/css/: app.css
frontend/js/: anchor-nodes-viewer.js  common.js  constants.js  debug-viewer.js  links-viewer.js  route-viewer.js
matrikkel/: __init__.py  cli.py  matrikkel_client.py
scripts/: README_TEST_MATRIKKEL.md  analyze_query_performance.py  check_spatial_index.sql  deploy.sh  diagnose_db_connection.sh  performance_test.py  poc_route_matrikkel.py  query_turrutebasen.py  setup_venv.sh  stiflyt-deploy.service  stiflyt-deploy.timer  stiflyt.service  test_matrikkel_integration.py  validate_database_structure.py  validate_routes.py
services/: database.py  excel_report.py  geometry_owner_service.py  matrikkel_owner_service.py  point_matrikkel_service.py  route_connections.py  route_debug.py  route_endpoints.py  route_geometry.py  route_service.py  startup_checks.py
